REmove markdown support

--- a/index.html
+++ b/index.html
@@ -812,7 +812,6 @@
 
 	<script src="dist/reveal.js"></script>
 	<script src="plugin/notes/notes.js"></script>
-	<script src="plugin/markdown/markdown.js"></script>
 	<script src="plugin/highlight/highlight.js"></script>
 	<script>
 		// More info about initialization & config:
@@ -826,7 +825,7 @@
 			pdfSeparateFragments: true,
 
 			// Learn about plugins: https://revealjs.com/plugins/
-			plugins: [RevealMarkdown, RevealHighlight, RevealNotes],
+			plugins: [RevealHighlight, RevealNotes],
 			dependencies: [
 				{ src: 'http://jlhg.github.io/highlight-pack/highlight.pack.js' },
 				{
