Explicitly add plugin

--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
 	<script src="dist/reveal.js"></script>
 	<script src="plugin/notes/notes.js"></script>
 	<script src="plugin/highlight/highlight.js"></script>
-	<script>
+	<script>f
 		// More info about initialization & config:
 		// - https://revealjs.com/initialization/
 		// - https://revealjs.com/config/
@@ -829,7 +829,7 @@
 			dependencies: [
 				{ src: 'http://jlhg.github.io/highlight-pack/highlight.pack.js' },
 				{
-				src: 'node_modules/reveal-code-focus/reveal-code-focus.js',
+				src: 'plugin/reveal-code-focus.js',
 				async: true,
 				callback: function() {
 					RevealCodeFocus();
