--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
 			// Learn about plugins: https://revealjs.com/plugins/
 			plugins: [RevealHighlight, RevealNotes],
 			dependencies: [
-				{ src: 'http://jlhg.github.io/highlight-pack/highlight.pack.js' },
+				{ src: 'https://jlhg.github.io/highlight-pack/highlight.pack.js' },
 				{
 				src: 'plugin/reveal-code-focus.js',
 				async: true,
