--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
 					<li>If time: JSInterop - How to check if JS was invoked</li>
 				</ul>
 			</section>
-			<section>
+			<section style="position:relative">
 				<h3>Resources:</h3>
 				<ul>
 					<li> <i class="fab fa-github-square"></i> bUnit repository: <a
@@ -806,6 +806,8 @@
 							href="https://steven-giesel.com/blogPost/a0790df4-ba49-4346-83e7-5c3c651d594e">https://steven-giesel.com/</a>
 					</li>
 				</ul>
+				<img style="position: fixed; left: 0; top:200px" src="assets/qr-slides.png"/>
+				<img style="position: fixed; right: 0; top:200px" src="assets/qr-stevengiesel.png"/>
 			</section>
 		</div>
 	</div>
