Even more... don't know what to write here

--- a/index.html
+++ b/index.html
@@ -938,6 +938,9 @@
 							</pre>
 						</div>
 					</div>
+					<ul class="current-only fragment" data-code-focus="14" data-code-block="1">
+						<li>Pass arguments as you would do in the real Blazor code</li>
+					</ul>
 				</section>
 			</section>
 			<section>
