--- a/index.html
+++ b/index.html
@@ -938,16 +938,35 @@
 							</pre>
 						</div>
 					</div>
-					<ul class="current-only fragment" data-code-focus="14" data-code-block="1">
+					<ul class="current-only fragment" data-code-focus="14,22" data-code-block="1">
 						<li>Pass arguments as you would do in the real Blazor code</li>
 					</ul>
 				</section>
 			</section>
 			<section>
+				<section>
+					<h1>Isolate components under test</h1>
+					<h3>Dealing with 3rd party libraries</h3>
+				</section>
+				<section>
+					<h1>Mock vs Stub</h1>
+					<div class="fragment">
+						<ul>
+							<li><b>Mock</b>: Dummy piece of code that you verify</li>
+							<li><b>Stub</b>: Dummy piece of code without behavior</li>
+						</ul>
+						<blockquote>
+							Stubs don't fail your tests, mocks can.
+						</blockquote>
+					</div>
+				</section>
+				<section>
+					<h3>Stub a component</h3>
+				</section>
+			</section>
+			<section>
 				<h3>What will follow</h3>
 				<ul>
-					<li>Using Parameter for our counter and test this</li>
-					<li>Stub and Mock a 3rd Party Blazor component plus good practices</li>
 					<li>If time: JSInterop - How to check if JS was invoked</li>
 				</ul>
 			</section>
