--- a/index.html
+++ b/index.html
@@ -963,6 +963,14 @@
 				<section>
 					<h3>Stub a component</h3>
 				</section>
+				<section>
+					<h3>Problems we want to solve with that</h3>
+					<ul>
+						<li>Remove dependencies and tedious setup (e.g. remove JavaScript setup)</li>
+						<li>Easily setup certian situations (e.g. throw exception in child component)</li>
+						<li class="fragment"><b>We don't wanna test 3rd party code - That is not our responsibility</b></li>
+					</ul>
+				</section>
 			</section>
 			<section>
 				<h3>What will follow</h3>
