--- a/index.html
+++ b/index.html
@@ -1131,8 +1131,8 @@
 							href="https://steven-giesel.com/blogPost/a0790df4-ba49-4346-83e7-5c3c651d594e">https://steven-giesel.com/</a>
 					</li>
 				</ul>
-				<img style="position: fixed; left: 0; top:200px" src="assets/qr-slides.png" />
-				<img style="position: fixed; right: 0; top:200px" src="assets/qr-stevengiesel.png" />
+				<img style="position: fixed; left: 0; top:100px" src="assets/qr-slides.png"  width="480px" height="480px"/>
+				<img style="position: fixed; right: 0; top:100px" src="assets/qr-stevengiesel.png"  width="480px" height="480px"/>
 			</section>
 		</div>
 	</div>
